Fix spacing seven-hour-cont

--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -33,7 +33,7 @@ span {
 }
 
 .seven-hour-cont {
-  justify-content: center;
+  justify-content: space-around;
   overflow: scroll;
 }
 
